// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Spinner with timeout 1`] = `
<DisabledSSRComponent>
  <TestComponent>
    <div>
       ...spinner 
    </div>
  </TestComponent>
</DisabledSSRComponent>
`;

exports[`Default Spinner with timeout 2 1`] = `
<div>
   ...spinner 
</div>
`;

exports[`Default Spinner with timeout 3 1`] = `<TestComponent />`;
